# fish-server

./: .gitignore  Cargo.toml
creates/lib-core/: Cargo.toml
creates/lib-core/src/: lib.rs
creates/lib-core/src/database/: mod.rs
creates/lib-core/src/error/: mod.rs
creates/lib-entity/: Cargo.toml
creates/lib-rpc/: Cargo.toml
creates/lib-utils/src/: lib.rs
creates/lib-utils/src/config/: mod.rs  web_config.rs
services/server-admin/: Cargo.toml
services/server-web/: Cargo.toml
services/server-web/src/: lib.rs  main.rs
